@@ -80,6 +80,7 @@ asynchbase_LIBADD := \
 	$(SLF4J_API)	\
 	$(ZOOKEEPER)	\
 	$(SUASYNC)	\
+	$(GUAVA)	\
 
 test_SOURCES := test/Test.java
 unittest_SRC := \
@@ -163,10 +164,11 @@ $(jar): $(top_builddir)/manifest $(top_builddir)/.javac-stamp $(classes)
 
 doc: $(top_builddir)/api/index.html
 
-JDK_JAVADOC=http://download.oracle.com/javase/6/docs/api
-NETTY_JAVADOC=http://docs.jboss.org/netty/3.2/api
-SUASYNC_JAVADOC=http://tsunanet.net/~tsuna/async/api
-JAVADOCS = $(JDK_JAVADOC) $(NETTY_JAVADOC) $(SUASYNC_JAVADOC)
+JDK_JAVADOC := http://download.oracle.com/javase/6/docs/api
+NETTY_JAVADOC := http://docs.jboss.org/netty/3.2/api
+SUASYNC_JAVADOC := http://tsunanet.net/~tsuna/async/api
+GUAVA_JAVADOC := http://docs.guava-libraries.googlecode.com/git/javadoc
+JAVADOCS = $(JDK_JAVADOC) $(NETTY_JAVADOC) $(SUASYNC_JAVADOC) $(GUAVA_JAVADOC)
 $(top_builddir)/api/index.html: $(asynchbase_SOURCES)
 	javadoc -d $(top_builddir)/api -classpath $(get_dep_classpath) \
           `echo $(JAVADOCS) | sed 's/\([^ ]*\)/-link \1/g'` $(asynchbase_SOURCES) \
@@ -194,6 +196,7 @@ pom.xml: pom.xml.in Makefile
 	{ \
 	  echo '<!-- Generated by Makefile on '`date`' -->'; \
 	  sed <$< \
+	    -e 's/@GUAVA_VERSION@/$(GUAVA_VERSION)/' \
 	    -e 's/@JAVASSIST_VERSION@/$(JAVASSIST_VERSION)/' \
 	    -e 's/@JCL_OVER_SLF4J_VERSION@/$(JCL_OVER_SLF4J_VERSION)/' \
 	    -e 's/@JUNIT_VERSION@/$(JUNIT_VERSION)/' \
